# song-request-linux

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  README_EN.md  SECURITY.md
docs/: ARCHITECTURE.md  PACKAGING.md  ROADMAP.md  SETUP.md  SETUP_EN.md  UI_REFERENCES.md  UI_UX.md
i18n/: en-US.json  pt-BR.json
scripts/: check-runtime-prereqs  install-cachyos-deps  install-desktop-entry  install-user-friendly  package-portable  package-windows  song-request-linux-open  song-request-linux-stop  uninstall-user  update-from-github
scripts/windows/: open.ps1  stop.ps1
src/: commands.rs  config.rs  connections.rs  dashboard.rs  diagnostics.rs  display.rs  http.rs  main.rs  overlay.rs  pear.rs  playback_coordinator.rs  player.rs  request_flow.rs  song_requests.rs  spotify.rs  state.rs  tls.rs  twitch_auth.rs  twitch_chat.rs  youtube.rs
