[package]
name = "song-request-linux"
version = "0.1.12"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Linux-first Twitch song request app for Spotify and YouTube."

[dependencies]
anyhow = "1"
axum = "0.7"
axum-server = { version = "0.8", features = ["tls-rustls"] }
base64 = "0.22"
futures-util = "0.3"
rand = "0.9"
rcgen = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
